# opengl

./: .clang-format  .clang-tidy  .cppcheck-ignore  .gitattributes  .gitignore  .gitmodules  .iwyu.imp  CMakeLists.txt  README-android.md  README-developer.md  README-devs.md  README.md  assimp.patch  com.cyao.opengl.yml  imgui.ini
assets/: mercury-planet.zip.REMOVED.git-id
assets/fonts/: NotoSansCJK-Regular.ttc
assets/models/: earth.blend  rock.mtl  untitled.mtl
assets/shaders/: animation.vert  backpack.frag  backpack.geom  basic.frag  basic.vert  blitz.vert  block.frag  block.vert  common.vert  cube.frag  cube.vert  cubemap.frag  cubemap.vert  default.frag  default.vert  earth.frag  earth.vert  editor.frag  framebuffer.frag  framebuffer.vert  light.frag  percentage.vert  single_block.vert  sky.frag  sky.vert  sun.frag  sun.vert  text.frag  text.vert  ui.frag  ui.vert  vector.frag  vector.geom  vector.vert  window.frag
assets/strings/: strings.csv
assets/textures/: 8k_mercury_gs.jpg.REMOVED.git-id  Mercury_N.jpg.REMOVED.git-id  backpack.zip.1.REMOVED.git-id  button.aseprite  roughness.jpg.REMOVED.git-id
check/: assets  build.ninja
cmake/: distribute-linux.sh  getdll32.sh  getdll64.sh  index.html.in  linux-launcher  localize.py  mac-patch-dylib.sh  sign-apk.sh
include/: common.hpp  components.hpp  game.hpp  items.hpp  registers.hpp  scene.hpp  shader.hpp  texture.hpp  utils.hpp  vertexArray.hpp
include/actors/: actor.hpp  cube.hpp  player.hpp  sun.hpp  view.hpp  world.hpp
include/components/: cameraComponent.hpp  collisionComponent.hpp  component.hpp  crafting.hpp  drawComponent.hpp  furnace.hpp  inputComponent.hpp  inventory.hpp  meshComponent.hpp  modelComponent.hpp  movementComponent.hpp  noise.hpp  physicsComponent.hpp  playerInventory.hpp  recatangleCollisionComponent.hpp  sprite2DComponent.hpp
include/glad/: glad.h
include/managers/: IOManager.hpp  assimpIO.hpp  componentManager.hpp  entityManager.hpp  eventManager.hpp  fontManager.hpp  glManager.hpp  glmanager.hpp  localeManager.hpp  managerManager.hpp  physicsManager.hpp  renderer.hpp  shaderManager.hpp  storageManager.hpp  systemManager.hpp  textureManager.hpp
include/misc/: blocks.hpp  sparse_set.hpp  sparse_set_view.hpp
include/opengl/: camera.hpp  cubemap.hpp  framebuffer.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  types.hpp  ubo.hpp  vertexArray.hpp
include/scenes/: chunk.hpp  level.hpp
include/screens/: hud.hpp  screen.hpp
include/shaders/: basic.frag  basic.vert
include/systems/: UISystem.hpp  cameraSystem.hpp  inputSystem.hpp  physicsSystem.hpp  renderSystem.hpp  system.hpp  textSystem.hpp  worldSystem.hpp
include/ui/: UIComponent.hpp  UIScreen.hpp  backgroundComponent.hpp  buttonComponent.hpp  controls.hpp  freetype.hpp  mainMenu.hpp  textComponent.hpp
include/ui/components/: backgroundComponent.hpp  buttonComponent.hpp  textComponent.hpp
include/ui/screens/: controlUI.hpp  divUI.hpp  mainUI.hpp
photos/: recording.mov.REMOVED.git-id
src/: components.cpp  game.cpp  glad.c  main.cpp  registers.cpp  scene.cpp  shader.cpp  texture.cpp  utils.cpp  vertexArray.cpp
src/actors/: actor.cpp  cube.cpp  player.cpp  sun.cpp  view.cpp  world.cpp
src/components/: cameraComponent.cpp  collisionComponent.cpp  component.cpp  crafting.cpp  drawComponent.cpp  furnace.cpp  inputComponent.cpp  inventory.cpp  meshComponent.cpp  modelComponent.cpp  movementComponent.cpp  noise.cpp  physicsComponent.cpp  playerInventory.cpp  recatangleCollisionComponent.cpp  rectangleCollisionComponent.cpp  sprite2DComponent.cpp  texture2D.cpp
src/managers/: IOManager.cpp  assimpIO.cpp  componentManager.cpp  entityManager.cpp  eventManager.cpp  fontManager.cpp  glManager.cpp  glmanager.cpp  localeManager.cpp  managerManager.cpp  physicsManager.cpp  renderer.cpp  shaderManager.cpp  storageManager.cpp  systemManager.cpp  textureManager.cpp
src/misc/: sparse_set.cpp
src/opengl/: camera.cpp  cubemap.cpp  framebuffer.cpp  glmanager.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  ubo.cpp  vertexArray.cpp
src/scenes/: chunk.cpp  level.cpp
src/screens/: hud.cpp  screen.cpp
src/systems/: UISystem.cpp  cameraSystem.cpp  inputSystem.cpp  physicsSystem.cpp  renderSystem.cpp  system.cpp  textSystem.cpp  worldSystem.cpp
src/ui/: UIComponent.cpp  UIScreen.cpp  backgroundComponent.cpp  buttonComponent.cpp  controlUI.cpp  controls.cpp  freetype.cpp  mainMenu.cpp  textComponent.cpp
src/ui/components/: backgroundComponent.cpp  buttonComponent.cpp  textComponent.cpp
src/ui/screens/: controlUI.cpp  divUI.cpp  mainUI.cpp
t/: build.ninja
test/: template_stat.cpp
